--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.1",
-    "com.unity.ide.rider": "3.0.18",
-    "com.unity.ide.visualstudio": "2.0.17",
-    "com.unity.ide.vscode": "1.2.5",
-    "com.unity.ml-agents": "2.3.0-exp.3",
-    "com.unity.render-pipelines.universal": "12.1.10",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.collab-proxy": "1.5.7",
+    "com.unity.ide.rider": "2.0.7",
+    "com.unity.ide.visualstudio": "2.0.9",
+    "com.unity.ide.vscode": "1.2.3",
+    "com.unity.ml-agents": "2.1.0-exp.1",
+    "com.unity.quicksearch": "2.0.2",
+    "com.unity.render-pipelines.universal": "10.5.0",
+    "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.4.8",
     "com.unity.toolchain.linux-x86_64": "0.1.18-preview",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.19-preview",
     "com.unity.ugui": "1.0.0",
