--- a/Assets/Resources/test_configs/spawner_test_interactive_button.yaml
+++ b/Assets/Resources/test_configs/spawner_test_interactive_button.yaml
@@ -10,9 +10,16 @@ arenas:
       - !Vector3 {x: 10, y: 0, z: 20}
       rotations: [90]
     - !Item
+      name: Pillar-Button
+      positions:
+      - !Vector3 {x: 30, y: 0, z: 30}
+      colors:
+      - !RGB {r: 80, g: 0, b: 60}
+    - !Item
       name: SpawnerContainer
       positions:
       - !Vector3 {x: 25, y: 0, z: 25}
       initialValues: [0.7, 2]
       colors:
       - !RGB {r: 80, g: 0, b: 60}
+
