--- a/Assets/Resources/test_configs/example1.yaml
+++ b/Assets/Resources/test_configs/example1.yaml
@@ -1,23 +1,113 @@
-!ArenaConfig
+!ArenaConfig 
 arenas:
   0: !Arena
-    t: 0
+    pass_mark: 49
+    t: 100
     items:
     - !Item
-      name: Wall
+      name: Agent
       positions:
-      - !Vector3 {x: 10, y: 0, z: 10}
-      - !Vector3 {x: -1, y: 0, z: 30}
-      colors:
-      - !RGB {r: 204, g: 0, b: 204 }
-      rotations: [45]
+      - !Vector3 {x: -1, y: 0, z: -1}
+    - !Item
+      name: GoodGoalMulti
       sizes:
-      - !Vector3 {x: -1, y: 5, z: -1}
-    - !Item
-      name: CylinderTunnel
-      colors:
-      - !RGB {r: 204, g: 0, b: 204 }
-      - !RGB {r: 204, g: 0, b: 204 }
-      - !RGB {r: 204, g: 0, b: 204 }
-    - !Item
-      name: GoodGoal
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
