--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -15,6 +15,8 @@ arenas:
       - !Vector3 {x: 25, y: 0, z: 30}
       moveDurations: [0.1]
       resetDurations: [1.0]
+      rewardNames: ["GoodGoal", "BadGoal"]
+      rewardWeights: [20, 80]
       spawnProbability: 1.0
 
 
