Interactivebutton: can now specify where to spawn the rewards.

--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -18,6 +18,4 @@ arenas:
       rewardNames: ["GoodGoal", "BadGoal", "GoodGoalMulti"]
       rewardWeights: [0, 0, 80]
       spawnProbability: 1.0
-
-
-      
+      rewardSpawnPos: !Vector3 {x: 25, y: 0, z: 15}
