--- a/Assets/Resources/test_configs/example1.yaml
+++ b/Assets/Resources/test_configs/example1.yaml
@@ -1,113 +1,11 @@
 !ArenaConfig 
 arenas:
   0: !Arena
-    pass_mark: 49
-    t: 100
+    pass_mark: 0
+    t: 500
     items:
     - !Item
-      name: Agent
+      name: SpawnerTree
       positions:
-      - !Vector3 {x: -1, y: 0, z: -1}
-    - !Item
-      name: GoodGoalMulti
-      sizes:
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
-      - !Vector3 {x: 0.5, y: 0.5, z: 0.5}
+      - !Vector3 {x: 20, y: 0, z: 20}
+      spawnCounts: [10]
