--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -8,7 +8,7 @@ arenas:
       name: Agent
       positions:
       - !Vector3 {x: 20, y: 2, z: 20}
-      rotations: [0]s
+      rotations: [0]
     - !Item
       name: Wall
       positions:
