added functionality to randomize the colour of the interactive button

--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -18,5 +18,5 @@ arenas:
       rewardNames: ["GoodGoal", "BadGoal", "GoodGoalMulti"]
       rewardWeights: [100, 0, 0]
       spawnProbability: 1.0
-      maxRewardCounts: [-1, -1, -1]
+      maxRewardCounts: [-1, -1, ]
       rewardSpawnPos: !Vector3 {x: 25, y: 0, z: 23}
