introduced toggle on/off camera and reset feature
the user can now toggle on/off via yaml config files whether the episode can be reset via R, or camera perspective can change via C. The latter is still not functioning properly. However, the code logic is sound and robust according to my testing. Still WIP. + cleaned up scripts to get rid of debug logs for readability.

--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -3,6 +3,8 @@ arenas:
   0: !Arena
     pass_mark: 70
     t: 250
+    canResetEpisode: true
+    canChangePerspective: false
     items:
     - !Item
       name: Agent
