--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -1,10 +1,11 @@
 !ArenaConfig
 arenas:
   0: !Arena
-    pass_mark: 70
+    pass_mark: 0
     t: 250
     canResetEpisode: true
     canChangePerspective: true
+    showNotification: true 
     items:
     - !Item
       name: Agent
