Forgot to mention...
Also fixed the spawner tree time discrepancy by combining the two coroutines into one for better synchrony.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ Packages/packages-lock.json
 .vsconfig
 
 Assets/ML-Agents/Timers/*
+.history/Assets/Resources/test_configs/spawner_test_20230906223546.yaml
+.history/Assets/Resources/test_configs/spawner_test_20230909141527.yaml
+.history/Assets/Resources/test_configs/spawner_test_20230909141538.yaml
