--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ Assets/ML-Agents/Timers/*
 .history/Assets/Resources/test_configs/spawner_test_20230906223546.yaml
 .history/Assets/Resources/test_configs/spawner_test_20230909141527.yaml
 .history/Assets/Resources/test_configs/spawner_test_20230909141538.yaml
+.history/Assets/Resources/test_configs/spawner_test_20230909142059.yaml
+.history/Assets/Resources/test_configs/spawner_test_20230909142151.yaml
