--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,8 @@ Assets/ML-Agents/Timers/*
 .history/Assets/Resources/test_configs/spawner_test_20230909141538.yaml
 .history/Assets/Resources/test_configs/spawner_test_20230909142059.yaml
 .history/Assets/Resources/test_configs/spawner_test_20230909142151.yaml
+.history/Assets/Scripts/NotificationManager_20230909135707.cs
+.history/Assets/Scripts/NotificationManager_20230910213100.cs
+.history/Assets/Scripts/NotificationManager_20230910213119.cs
+.history/Assets/Scripts/NotificationManager_20230910213517.cs
+.history/Assets/Scripts/NotificationManager_20230910213530.cs
