--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ Assets/ML-Agents/Timers/*
 .history/Assets/Scripts/TrainingAgent_20230910232425.cs
 .history/Assets/Scripts/TrainingAgent_20230910232455.cs
 .history/Assets/Scripts/TrainingAgent_20230910232506.cs
+.history/Assets/Scripts/NotificationManager_20230910235318.cs
