a variety of changes that fixes the pillar button #20 bug
also added helper pacakge that lets objects be exported as .FBX files (for blender). Also, #23 is fixed by this point.

--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -16,6 +16,7 @@ arenas:
       name: Pillar-Button
       positions:
       - !Vector3 {x: 20, y: 0, z: 25}
+      rotations: [0]
       moveDurations: [0.1]
       resetDurations: [1.0]
       rewardNames: ["GoodGoal", "BadGoal", "GoodGoalMulti"] # the list of rewards that can be spawned
