--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ Assets/ML-Agents/Timers/*
 .history/Assets/Scripts/TrainingAgent_20230910232425.cs
 .history/Assets/Scripts/TrainingAgent_20230910232455.cs
 .history/Assets/Scripts/TrainingAgent_20230910232506.cs
+.plastic/fs_beacon
