--- a/Assets/Resources/test_configs/spawner_test.yaml
+++ b/Assets/Resources/test_configs/spawner_test.yaml
@@ -1,12 +1,12 @@
 !ArenaConfig
 randomizeArenas: true # whether to randomize arenas from the beginning. Default is false.
+showNotification: false # show/hide the notification box. Default is false.
+canResetEpisode: false # allow the user to change the perspective. Default is true.
+canChangePerspective: false # allow the user to change the perspective. Default is true.
 arenas:
   0: !Arena
     pass_mark: 0
     t: 250
-    canResetEpisode: true # allow the user to change the perspective. Default is true.
-    canChangePerspective: true # allow the user to change the perspective. Default is true.
-    showNotification: true # show/hide the notification box. Default is false.
     items:
     - !Item
       name: Agent
