arenas now cycling during training
but skipping the first arena for some reason. WIP

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ Assets/ML-Agents/Timers/*
 .history/Assets/Scripts/TrainingAgent_20230910232455.cs
 .history/Assets/Scripts/TrainingAgent_20230910232506.cs
 .plastic/fs_beacon
+Assets/Prefabs/Other-Unique/SignPosterboard.prefab
