changed rate to lower the flashing effect

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ Assets/ML-Agents/Timers/*
 .history/Assets/Scripts/TrainingAgent_20230910232506.cs
 .plastic/fs_beacon
 Assets/Prefabs/Other-Unique/SignPosterboard.prefab
+Assets/Prefabs/Other-Unique/SignPosterboard.prefab
