--- a/Assets/Resources/test_configs/arenas_multiple_cycling_test.yaml
+++ b/Assets/Resources/test_configs/arenas_multiple_cycling_test.yaml
@@ -1,5 +1,6 @@
 !ArenaConfig
-randomizeArenas: false # by default it is set to false, so arenas are NOT randomized. True will randomize arenas where arenas > 0.
+# Checking whether the arenas are cycling sequentially and randomly in PLAY mode only.
+# Also added check to see if arena index values below 0 will be handled correctly (they should be converted to positive and unique index values).
 arenas:
   0: !Arena
     pass_mark: 1
@@ -32,6 +33,21 @@ arenas:
       sizes:
       - !Vector3 { x: 2, y: 2, z: 2 }
   2: !Arena
+    pass_mark: 1
+    t: 500
+    items:
+    - !Item
+      name: Agent
+      positions:
+      - !Vector3 {x: 20, y: 0, z: 20}
+      rotations: [0]
+    - !Item
+      name: BadGoal
+      positions:
+      - !Vector3 {x: 20, y: 0, z: 24}
+      sizes:
+      - !Vector3 { x: 2, y: 2, z: 2 }
+  -3: !Arena
     pass_mark: 1
     t: 500
     items:
