ading mlagents references to test assembly

--- a/Assets/Tests/Tests.asmdef
+++ b/Assets/Tests/Tests.asmdef
@@ -1,9 +1,12 @@
 {
     "name": "Tests",
-    "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "Unity.MLAgents",
+        "Unity.MLAgents.Sensors",
+        "Unity.MLAgents.SideChannels",
+        "Unity.MLAgents.Policies"
     ],
     "includePlatforms": [],
     "excludePlatforms": [
