--- a/Assets/Resources/test_configs/every_object_spawn_test.yaml
+++ b/Assets/Resources/test_configs/every_object_spawn_test.yaml
@@ -1,76 +1,302 @@
 !ArenaConfig
 arenas:
   0: !Arena
-    pass_mark: 0
-    t: 250
-    items:
+    t: 250 # The time limit for the arena in seconds. In other words, the time limit for the agent to complete the task (the arena resets after this time).
     - !Item
-      name: Agent
-      positions:
-      - !Vector3 {x: 10, y: 0, z: 20}
-      rotations: [90]
+      name: Agent # Note that the agent will always be spawned first regardless of its position in the configuration.
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15} # The position of the item. This is a Vector3 object with x, y, and z coordinates. Leave values for random spawning.
+      rotations: [0] # The rotations of the items. It can be in any angle but default is 0 degrees.
+
+# IMMOVABLE OBJECTS (Note: RAMP is immovable but has a special tag of "ramp" for the agent to detect).
     - !Item
-      name: SignPosterboard
-      positions:
-      - !Vector3 {x: 20, y: 0, z: 8}
-      symbolNames:
-      - "left-arrow" 
-    - !Item
-      name: ShrinkGoal
-      positions:
-      - !Vector3 {x: 20, y: 0, z: 14}
+      name: CylinderTunnel
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
       sizes:
-      - !Vector3 {x: 0.1, y: 0.1, z: 0.1}
-      symbolNames:
-      - "left-arrow"
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+
+    - !Item
+      name: CylinderTunnelTransparent
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors:
+    - !RGB {r: 255, g: 0, b: 255}
+
+    - !Item
+      name: Ramp
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+    
+    - !Item
+      name: Wall
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+
+    - !Item
+      name: WallTransparent
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+
+# MOVABLE OBJECTS 
+
+    - !Item
+      name: HeavyBlock
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: LightBlock
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: JBlock
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+    - !Item
+      name: LBlock
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: UBlock
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+# SIGNBOARD
+
+    - !Item
+      name: SignBoard
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+      symbolNames: 
+      - "transparent" # this is the default symbol that will be displayed if not changed in this parameter. 
+      # The list of symbols that can be used are: "transparent", "right-arrow", "left-arrow", "up-arrow", "down-arrow",
+      # ..."u-turn-arrow", "letter-a", "letter-b", "letter-c", "square", "triangle", "circle", "star", "tick", "cross".
+
+# VALANCED REWARDS SPAWNERS/DISPENSERS
+
+    - !Item
+      name: SpawnerButton # Interactive button that spawns rewards when pressed by the agent.
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+      moveDurations: [0.1] # the time it takes for the button to move forwards. This impacts the time the button can be pressed again.
+      resetDurations: [1.0] # the time it takes for the button to move backwards. This impacts the time the button can be pressed again.
+      rewardNames: ["GoodGoal", "BadGoal", "GoodGoalMulti"] # the list of rewards that can be spawned. The names must match the names of the rewards.
+      rewardWeights: [100, 0, 0] # the weights of each reward in the rewards list respectively. The sum of all weights must be 100.
+      spawnProbability: 1.0 # the probability of spawning the reward. 1.0 means 100% chance of spawning. 0.0 means 0% chance of spawning ANY reward.
+      maxRewardCounts: [-1, -1, -1] # the maximum number of times each reward can be spawned. -1 means no limit respectively for each reward.
+      rewardSpawnPos: !Vector3 {x: 25, y: 0, z: 23} # the position where the reward will be spawned upon pressing the button.
+
+    - !Item
+      name: SpawnerDispenserTall
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
       initialValues: [2.5]
-      finalValues: [1.5]
-      delays: [400]
-      changeRates: [-0.2]
+      finalValues: [0.5]
+      timesBetweenSpawns: [0.0]
+      doorDelays: [0.0]
+      spawnCounts: [10]
+
     - !Item
-      name: DecayGoal
-      positions:
-      - !Vector3 {x: 20, y: 0, z: 20}
-      initialValues: [4]
-      finalValues: [3]
-      delays: [250]
-      changeRates: [-0.003]
-    - !Item
-      name: AntiDecayGoal
-      positions:
-      - !Vector3 {x: 20, y: 0, z: 26}
+      name: SpawnerContainerShort
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
       sizes:
-      - !Vector3 {x: 0.1, y: 0.1, z: 0.1}
-      initialValues: [1]
-      finalValues: [1.5]
-      delays: [300]
-      changeRates: [-0.007]
-    - !Item
-      name: GrowGoal
-      positions:
-      - !Vector3 {x: 20, y: 0, z: 32}
-      initialValues: [1]
-      finalValues: [3.5]
-      delays: [100]
-      changeRates: [0.01]
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+      initialValues: [2.5]
+      finalValues: [0.5]
+      timesBetweenSpawns: [0.5]
+      doorDelays: [1.0]
+      spawnCounts: [1]
+    
     - !Item
       name: SpawnerTree
-      positions:
-      - !Vector3 {x: 30, y: 0, z: 30}
-      ripenTimes: [3]
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+      initialValues: [2.5]
+      finalValues: [0.5]
+      ripenTimes: [4.0]
       timesBetweenSpawns: [0.5]
-      spawnCounts: [50]
-      finalValues: [1]
+      spawnCounts: [10]
+
+# VALANCED REWARDS (GOALS)
+
     - !Item
-      name: SpawnerDispenser
-      positions:
-      - !Vector3 {x: 30, y: 0, z: 10}
-      spawnCounts: [-1]
-      timesBetweenDoorOpens: [-1]
+      name: GoodGoal
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
     - !Item
-      name: SpawnerContainer
-      positions:
-      - !Vector3 {x: 30, y: 0, z: 20}
-      spawnCounts: [1]
-      doorDelays: [20]
-      timesBetweenDoorOpens: [1]
+      name: GoodGoalBounce
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+     - !Item
+      name: BadGoal
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+    - !Item
+      name: BadGoalBounce
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: GoodGoalMulti
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: GoodGoalMultiBounce
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+    - !Item
+      name: BadGoalMulti
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+    
+    - !Item
+      name: BadGoalMultiBounce
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: RipenGoal
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: DecayGoal
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+    - !Item
+      name: DecoyGoal
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+    - !Item
+      name: DecayGoalBounce
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+# ZONES
+  
+    - !Item
+      name: HotZone
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+  
+    - !Item
+      name: DeathZone
+      positions: 
+      - !Vector3 {x: 20, y: 0, z: 15}
+      sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      colors: # can't change color
+
+  
