--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,5 @@ Assets/Prefabs/Other-Unique/SignPosterboard.prefab
 Assets/Prefabs/Other-Unique/SignPosterboard.prefab
 .plastic/plastic.changes
 .plastic/plastic.wktree
+.plastic/plastic.changes
+.plastic/plastic.wktree
