--- a/Assets/Resources/test_configs/sign_posterboard_symbol_test.yaml
+++ b/Assets/Resources/test_configs/sign_posterboard_symbol_test.yaml
@@ -1,8 +1,8 @@
 !ArenaConfig
 arenas:
   0: !Arena
-    pass_mark: 0
-    t: 250
+    passMark: 0
+    timeLimit: 250
     items:
     - !Item
       name: Agent
