simple changes to testing yaml configs

--- a/Assets/Resources/test_configs/every_object_spawn_test.yaml
+++ b/Assets/Resources/test_configs/every_object_spawn_test.yaml
@@ -1,4 +1,5 @@
 !ArenaConfig
+# Testing to make sure every object can spawn in the arena. !CORE TEST!
 arenas:
   0: !Arena
     passMark: 0 # The pass mark for the arena. The agent must achieve this score to pass the arena.
