--- a/Assets/Resources/test_configs/animal_skins_test.yaml
+++ b/Assets/Resources/test_configs/animal_skins_test.yaml
@@ -1,5 +1,5 @@
 !ArenaConfig
-# Testing all the animal skins on the agent in one yaml file in multiple arenas.
+# Testing all the animal skins to make sure they are all working correctly.
 arenas:
   0: !Arena
     passMark: 0
