--- a/Assets/Resources/test_configs/every_object_spawn_test.yaml
+++ b/Assets/Resources/test_configs/every_object_spawn_test.yaml
@@ -4,6 +4,7 @@ arenas:
   0: !Arena
     passMark: 0 # The pass mark for the arena. The agent must achieve this score to pass the arena.
     timeLimit: 250 # The time limit for the arena in seconds. In other words, the time limit for the agent to complete the task (the arena resets after this time).
+    items:  # This line indicates the start of the items list
     - !Item
       name: Agent # Note that the agent will always be spawned first regardless of its position in the configuration.
       positions: 
@@ -29,7 +30,7 @@ arenas:
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
       colors:
-    - !RGB {r: 255, g: 0, b: 255}
+      - !RGB {r: 255, g: 0, b: 255}
 
     - !Item
       name: Ramp
@@ -70,7 +71,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: LightBlock
@@ -79,7 +79,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: JBlock
@@ -88,7 +87,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
     - !Item
       name: LBlock
@@ -97,7 +95,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: UBlock
@@ -106,7 +103,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
 # SIGNBOARD
 
@@ -117,7 +113,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
       symbolNames: 
       - "transparent" # this is the default symbol that will be displayed if not changed in this parameter. 
       # The list of symbols that can be used are: "transparent", "right-arrow", "left-arrow", "up-arrow", "down-arrow",
@@ -132,7 +127,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
       moveDurations: [0.1] # the time it takes for the button to move forwards. This impacts the time the button can be pressed again.
       resetDurations: [1.0] # the time it takes for the button to move backwards. This impacts the time the button can be pressed again.
       rewardNames: ["GoodGoal", "BadGoal", "GoodGoalMulti"] # the list of rewards that can be spawned. The names must match the names of the rewards.
@@ -178,7 +172,6 @@ arenas:
       rotations: [0]
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
       initialValues: [2.5]
       finalValues: [0.5]
       ripenTimes: [4.0]
@@ -193,7 +186,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: GoodGoalBounce
@@ -201,15 +193,13 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
-     - !Item
+    - !Item
       name: BadGoal
       positions: 
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
     - !Item
       name: BadGoalBounce
@@ -217,7 +207,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: GoodGoalMulti
@@ -225,7 +214,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: GoodGoalMultiBounce
@@ -233,7 +221,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
     - !Item
       name: BadGoalMulti
@@ -241,7 +228,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
     
     - !Item
       name: BadGoalMultiBounce
@@ -249,7 +235,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: RipenGoal
@@ -257,7 +242,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: DecayGoal
@@ -265,7 +249,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
     - !Item
       name: DecoyGoal
@@ -273,7 +256,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
     - !Item
       name: DecayGoalBounce
@@ -281,7 +263,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
 # ZONES
   
@@ -291,7 +272,6 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
   
     - !Item
       name: DeathZone
@@ -299,6 +279,5 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 15}
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
-      colors: # can't change color
 
-  
+    
