--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "main" ]
   schedule:
     - cron: '29 17 * * 0'
+  workflow_dispatch:
 
 jobs:
   analyze:
@@ -35,7 +36,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '4.0'
+        dotnet-version: '5.1'
 
     - name: Build with dotnet
       run: dotnet build YourSolution.sln --configuration Release
