--- a/Assets/Resources/test_configs/spawner_hollowobj_test.yaml
+++ b/Assets/Resources/test_configs/spawner_hollowobj_test.yaml
@@ -1,5 +1,5 @@
 !ArenaConfig
-# Testing the SpawnerButton with different rewards and spawn probabilities.
+# Testing the Hollow-Obj with foundational parameters.
 randomizeArenas: false 
 showNotification: false 
 canResetEpisode: true 
