finalized yaml syntax for hollow-obj logic

--- a/Assets/Resources/test_configs/spawner_hollowobj_test.yaml
+++ b/Assets/Resources/test_configs/spawner_hollowobj_test.yaml
@@ -19,5 +19,9 @@ arenas:
       positions:
       - !Vector3 {x: 20, y: 0, z: 25}
       rotations: [0]
+      rewardToSpawn: ["GoodGoal"]
+      rewardSpawnPosition: !Vector3 {x: 20, y: 5, z: 25}
+      delayRewardSpawn: [true]
+      delayTime: [10]
 
   
