Revert "Add solution file"
This reverts commit 937497b6693195bb76c05b26e00fbf5053bff569.

Revert "Add solution file"

This reverts commit 06fa3c9bbaf13ce990cb75ce10605c814d4206df.

Revert "Add solution file"

This reverts commit b00d852b70f7d43524e6bc56b25ca7da810906ea.

Revert "Add solution file"

This reverts commit ae47dd178573d9fb6b333a457e1ff426f415e9d5.

Revert "added Releases configuration to run codeql"

This reverts commit c6f55fd52d9cc0649f45d1d2537d56d7bd050721.

Revert "Merge branch 'main' of https://github.com/Kinds-of-Intelligence-CFI/animal-ai-unity"

This reverts commit cb0998140ac0c296d137648618f93cfcf54b3ea0, reversing
changes made to 937497b6693195bb76c05b26e00fbf5053bff569.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
   schedule:
     - cron: '29 17 * * 0'
-  workflow_dispatch:
 
 jobs:
   analyze:
@@ -33,14 +32,17 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
+    # Removed Autobuild step
+    # - name: Autobuild (Commented out because custom build steps are required)
+    #   uses: github/codeql-action/autobuild@v3
+
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '5.0'
+        dotnet-version: '3.1' # Specify your .NET Core version here
 
     - name: Build with dotnet
-      run: dotnet build animal-ai-unity.sln --configuration Release
-
+      run: dotnet build YourSolution.sln --configuration Release
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
