--- a/Assets/Resources/test_configs/spawner_hollowobj_test.yaml
+++ b/Assets/Resources/test_configs/spawner_hollowobj_test.yaml
@@ -24,4 +24,4 @@ arenas:
       rewardToSpawn: ["DecoyGoal"] # Can be any rewards
       rewardSpawnPosition: !Vector3 {x: 20, y: 5, z: 25} # Spawns the reward 5 units above the Hollow-Obj
       delayRewardSpawn: [false] # Spawns the reward immediately if set false, otherwise, spawns after delayTime
-      delayTime: [10] # Spawns the reward after 10 seconds
+      delayTime: [10] # Spawns the reward after 10 frames
