--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -109,7 +109,7 @@
      <Compile Include="Assets\Scripts\ArenasParametersEventArgs.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\Scripts\Spawners\Spawner_InteractiveButton.cs" />
-     <Compile Include="Assets\Scripts\Spawners\HollowObjSpawner.cs" />
+     <Compile Include="Assets\Scripts\UI\BuildVersionControl.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
