ignoring data observations folder

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ Assets/Prefabs/Other-Unique/SignPosterboard.prefab
 .plastic/plastic.wktree
 .plastic/plastic.changes
 .plastic/plastic.wktree
+/ObservationLogs
