minor folder changes

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -108,6 +108,7 @@
      <Compile Include="Assets\Scripts\ArenasParametersEventArgs.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\Scripts\Spawners\Spawner_InteractiveButton.cs" />
+     <Compile Include="Assets\Scripts\DataZone.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
