--- a/Assets/Resources/test_configs/every_object_spawn_test.yaml
+++ b/Assets/Resources/test_configs/every_object_spawn_test.yaml
@@ -122,7 +122,7 @@ arenas:
 # VALANCED REWARDS SPAWNERS/DISPENSERS
 
     - !Item
-      name: SpawnerButton # Interactive button that spawns rewards when pressed by the agent.
+      name: SpawnerButton # Interactive button that spawns rewards when triggered by the agent.
       positions:
       - !Vector3 {x: 32, y: 31, z: 30}
       rotations: [0]
