--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ Assets/Prefabs/Other-Unique/SignPosterboard.prefab
 *.csv
 /ObservationLogs
 .DS_Store
+Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Anton SDF.asset
