minor comment change

--- a/Assets/Resources/test_configs/decoy-file-test.yaml
+++ b/Assets/Resources/test_configs/decoy-file-test.yaml
@@ -1,4 +1,4 @@
-# Testing file for ongoing development. Will be removed once the feature is complete.
+# Testing file for ongoing development.
 !ArenaConfig
 arenas:
   0: !Arena
