--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,7 +5,7 @@
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.ml-agents": "2.3.0-exp.3",
+    "com.unity.ml-agents": "3.0.0",
     "com.unity.recorder": "3.0.4",
     "com.unity.render-pipelines.universal": "12.1.10",
     "com.unity.test-framework": "1.1.33",
