--- a/Assets/Resources/test_configs/spawnerButton-experimental1.yaml
+++ b/Assets/Resources/test_configs/spawnerButton-experimental1.yaml
@@ -175,19 +175,29 @@ arenas:
     - !Item
       name: Wall
       positions:
-      - !Vector3 {x: 7.5, y: 0, z: 15.5}
+      - !Vector3 {x: 7.5, y: 0, z: 15.03}
       rotations: [90]
       sizes:
-      - !Vector3 {x: 11, y: 2.5, z: 3}
+      - !Vector3 {x: 11.5, y: 2.5, z: 3}
       colors:
       - !RGB {r: 255, g: 0, b: 255}
 
     - !Item
       name: Wall
       positions:
-      - !Vector3 {x: 32.5, y: 0, z: 15.5}
+      - !Vector3 {x: 32.5, y: 0, z: 15.03}
       rotations: [90]
       sizes:
-      - !Vector3 {x: 11, y: 2.5, z: 3}
+      - !Vector3 {x: 11.5, y: 2.5, z: 3}
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+
+    - !Item
+      name: Wall
+      positions:
+      - !Vector3 {x: 20, y: 0, z: 4.53}
+      rotations: [0]
+      sizes:
+      - !Vector3 {x: 4.45, y: 2.5, z: 3}
       colors:
       - !RGB {r: 255, g: 0, b: 255}
