--- a/Assets/Resources/test_configs/spawner_button_test.yaml
+++ b/Assets/Resources/test_configs/spawner_button_test.yaml
@@ -26,4 +26,4 @@ arenas:
       spawnProbability: 1.0 # the probability of spawning the reward 
       maxRewardCounts: [-1, -1, -1] # the maximum number of times each reward can be spawned. -1 means no limit
       rewardSpawnPos: !Vector3 {x: 25, y: 0, z: 23} # the position where the reward will be spawned
-  
+      spawnedRewardSize: !Vector3 {x: 1, y: 1, z: 1} # the size of the reward
