--- a/Assets/Resources/test_configs/datazone-test.yaml
+++ b/Assets/Resources/test_configs/datazone-test.yaml
@@ -18,3 +18,11 @@ arenas:
       - !Vector3 {x: 5, y: 0, z: 5}
       zoneVisibility: true # This is a boolean value that determines whether the zone is visible or not.
       triggerZoneID: ["Agent has entered the DataZone 1"] # This is a string value that is used to identify the zone.
+      operations:
+      - !spawnObject
+          spawnable: !Item
+            name: GoodGoal
+            sizes:
+            - !Vector3 {x: 1, y: 1, z: 1}
+            positions:
+            - !Vector3 {x: 15, y: 1, z: 25}
