Add EndEpisode operation
Also put the tag mappings in a dictionary, so that we're not maping YAMLClasses bigger every time we add a new operation

--- a/Assets/Resources/test_configs/spawner_button_test.yaml
+++ b/Assets/Resources/test_configs/spawner_button_test.yaml
@@ -57,3 +57,6 @@ arenas:
       #       name: GoodGoal
       #       sizes:
       #       - !Vector3 {x: 1, y: 1, z: 1}
+
+      # - !endEpisode
+      #   reward: 3
