--- a/Assets/Resources/test_configs/spawner_button_test.yaml
+++ b/Assets/Resources/test_configs/spawner_button_test.yaml
@@ -63,3 +63,11 @@ arenas:
 
       # - !grantReward
       #   reward: 3
+
+      # - !despawnObject
+      #     spawnable: !Item
+      #       name: GoodGoal
+      #       sizes:
+      #       - !Vector3 {x: 1, y: 1, z: 1}
+      #       positions:
+      #       - !Vector3 {x: 15, y: 1, z: 25}
