--- a/Assets/Resources/test_configs/spawner_button_test.yaml
+++ b/Assets/Resources/test_configs/spawner_button_test.yaml
@@ -71,3 +71,6 @@ arenas:
       #       - !Vector3 {x: 1, y: 1, z: 1}
       #       positions:
       #       - !Vector3 {x: 15, y: 1, z: 25}
+
+      # - !freezeAgent
+      #     freezeDuration: 1
