--- a/Assets/Resources/test_configs/spawner_button_test.yaml
+++ b/Assets/Resources/test_configs/spawner_button_test.yaml
@@ -74,3 +74,7 @@ arenas:
 
       # - !freezeAgent
       #     freezeDuration: 1
+
+      # Note this can't be used with the button but putting it here for now for consistency
+      # - !grantContinuousReward
+      #   rewardPerStep: 0.005
